Use pre-line to solve for extra spacing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -230,7 +230,7 @@ body {
     flex: 1;
     overflow-y: auto;
     margin-bottom: 10px;
-    white-space: pre-wrap;
+    white-space: pre-line;
 }
 
 #branding {
